feat(intent): adopt adaptive-classifier as 8-class intent classification handler [OMN-2735]
Replaces custom TF-IDF mapping with adaptive-classifier (embedding
similarity + centroid per class) for deterministic 8-class intent
classification. Labels are versioned in labels/intent_classes_v1.yaml
and updated via PR, not runtime API calls.

- Add labels/intent_classes_v1.yaml: versioned label store (v1.0.0)
  with 7 examples per class for all 8 EnumIntentClass values
- Add handler_adaptive_classification.py: embedding-based handler
  using AdaptiveClassifier(seed=42) for determinism; implements
  unknown class policy (confidence < 0.4 → label=unknown, is_unknown=True)
- Export new handler symbols from handlers __init__.py
- Add 20 unit tests covering R3 (determinism) and R2 (unknown policy)
- Add labels/ to validate_clean_root.py allowed root directories
- Add io_audit_whitelist.yaml entry for label store bootstrap I/O
- Add adaptive-classifier>=0.1.2 dependency

DoD verified:
- uv run pytest tests/unit/ -k intent_determinism: 7 passed
- uv run pytest tests/unit/ -k intent_unknown_policy: 6 passed
- uv run ruff check .: 0 violations

--- a/tests/audit/io_audit_whitelist.yaml
+++ b/tests/audit/io_audit_whitelist.yaml
@@ -79,6 +79,16 @@ files:
     allowed_rules:
       - "file-io"
 
+  # Adaptive classifier handler (OMN-2735) — reads the versioned label store YAML
+  # (labels/intent_classes_v1.yaml) once at module initialization time to bootstrap
+  # the AdaptiveClassifier centroid embeddings. This is one-time bootstrap I/O, not
+  # per-request I/O. A proper Effect node refactor is tracked in a follow-up ticket.
+  - path: "src/omniintelligence/nodes/node_intent_classifier_compute/handlers/handler_adaptive_classification.py"
+    reason: "Reads versioned label store YAML (labels/intent_classes_v1.yaml) once at module init to bootstrap
+      AdaptiveClassifier centroid embeddings; I/O is initialization-time only, not per-call"
+    allowed_rules:
+      - "file-io"
+
 # Example of a legacy node pending refactor
 # - path: "src/omniintelligence/nodes/legacy_*.py"
 #   reason: "Legacy nodes pending refactor - tracked in OMN-XXX"
