--- a/pyproject.toml
+++ b/pyproject.toml
@@ -34,6 +34,7 @@ dependencies = [
     "confluent-kafka>=2.12.0,<3.0.0",
     "tenacity>=8.2.0",
     "watchdog>=6.0.0",
+    "adaptive-classifier>=0.1.2",
 ]
 
 [project.urls]
