feat(quality-scoring): integrate radon for accurate McCabe cyclomatic complexity [OMN-1452]
Adds optional radon integration to the complexity dimension of
quality_scoring_compute. When radon is installed the complexity score
uses cc_visit() for accurate per-function McCabe cyclomatic complexity
mapped through grade-band interpolation (A=0.8-1.0, B=0.5-0.8,
C=0.2-0.5, D+=0.0-0.2). The existing AST control-flow approximation
is retained as fallback when radon is absent.

Changes:
- handler_quality_scoring.py: conditional radon import with
  _RADON_AVAILABLE flag, new _compute_radon_complexity_score(),
  _mccabe_to_score() grade-band mapper, radon_available() helper;
  _compute_all_dimensions() uses radon path when available;
  ANALYSIS_VERSION bumped to 1.2.0; radon_complexity_enabled added
  to QualityScoringResult
- protocols.py: QualityScoringResult refactored to split required and
  optional (total=False) TypedDict base classes; adds optional
  radon_complexity_enabled field
- handlers/__init__.py: exports radon_available
- pyproject.toml: adds radon>=6.0.0 as optional dep under [analysis]
  extra and in dev group for test coverage
- test_radon_complexity.py: 22 new unit tests covering grade-band math,
  radon integration, fallback patching, and metadata field
- test_score_code_quality.py: updated key-set assertion for new
  optional field

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -30,6 +30,9 @@ tenacity = ">=8.2.0"
 confluent-kafka = ">=2.12.0,<3.0.0"
 pyyaml = ">=6.0"
 python-dotenv = ">=1.0.0"
+# Optional: accurate McCabe cyclomatic complexity (OMN-1452)
+# Falls back to AST approximation when not installed
+radon = {version = ">=6.0.0", optional = true}
 
 [tool.poetry.group.dev.dependencies]
 # Versions aligned with [dependency-groups].dev for consistency
@@ -45,6 +48,8 @@ types-PyYAML = ">=6.0.0"
 requests = ">=2.31.0"
 factory-boy = ">=3.3.0"
 pre-commit = ">=4.5.0"
+# Optional radon included in dev for test coverage of radon code path (OMN-1452)
+radon = ">=6.0.0"
 
 [tool.poetry.group.core.dependencies]
 # ONEX private ecosystem dependencies (NOT on public PyPI)
@@ -118,6 +123,13 @@ dependencies = [
     "watchdog>=6.0.0",
 ]
 
+[project.optional-dependencies]
+# Optional analysis backend for accurate McCabe cyclomatic complexity (OMN-1452)
+# Install with: pip install omniintelligence[analysis]
+analysis = [
+    "radon>=6.0.0",
+]
+
 [project.entry-points."onex.domain_plugins"]
 intelligence = "omniintelligence.runtime.plugin:PluginIntelligence"
 
@@ -137,6 +149,8 @@ dev = [
     "requests>=2.31.0",
     "factory-boy>=3.3.0",
     "pre-commit>=4.5.0",
+    # Optional radon dependency included in dev for test coverage of radon code path
+    "radon>=6.0.0",
 ]
 
 # Core node system dependencies
