--- a/pyproject.toml
+++ b/pyproject.toml
@@ -282,4 +282,5 @@ markers = [
     "unit: marks tests as unit tests",
     "audit: marks tests as I/O audit enforcement tests",
     "drift: marks tests for intent drift detection logic",
+    "smoke: marks tests as pipeline health smoke tests (OBS-001, run every 5 min)",
 ]
