feat(observability): add pattern pipeline health smoke test [OMN-1803] (#205)
* feat(observability): add pattern pipeline health smoke test [OMN-1803]

Implements OBS-001: a 5-minute-interval health check that validates the
pattern extraction compute pipeline end-to-end by injecting synthetic
sessions and verifying output structure, insight count, and latency.

Changes:
- scripts/smoke_test_pattern_pipeline.py: standalone CLI script runnable
  via cron (*/5 * * * *) or Kubernetes CronJob. Emits structured JSON
  metrics (success/failure counters, latency_ms histogram,
  insights_extracted gauge) to stdout. Exit 0 on healthy, 1 on failure.
- tests/integration/nodes/test_pattern_pipeline_smoke.py: 10 pytest
  smoke tests (marker: smoke) covering latency budget, output structure,
  insight extraction, field integrity, metric non-negativity, and edge
  cases (validation rejection, high threshold, single session).
- pyproject.toml: registers smoke pytest marker with scheduling doc.

Metrics emitted:
  pattern_pipeline.smoke_test.success
  pattern_pipeline.smoke_test.failure
  pattern_pipeline.smoke_test.latency_ms
  pattern_pipeline.smoke_test.insights_extracted

Scheduling:
  pytest -m smoke tests/integration/nodes/test_pattern_pipeline_smoke.py
  # or: */5 * * * * python scripts/smoke_test_pattern_pipeline.py --json

* fix(smoke): align tools_used with tool_executions sequence

- tools_used tuple corrected from ("Read","Edit","Read","Edit","Bash","Read")
  to ("Read","Edit","Read","Edit","Edit","Bash") to match the 6 actual
  ModelToolExecution entries (second Edit was missing, trailing Read was spurious)
- Remove unused noqa: BLE001 directive (BLE001 not in ruff select list)

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -211,6 +211,7 @@ markers = [
     "unit: marks tests as unit tests",
     "audit: marks tests as I/O audit enforcement tests",
     "drift: marks tests for intent drift detection logic",
+    "smoke: marks tests as pipeline health smoke tests (OBS-001, run every 5 min)",
     "forecast: marks tests for intent cost and latency forecasting logic",
     "baseline: marks tests for historical cost/latency baseline management",
     "intent_graph: marks tests for intent graph accumulation logic",
